# organizer_prg

./: .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: app.py  auth.py  db.py  decorators.py  main.py  security.py  settings.py
backend/domains/admin_moduli/: __init__.py  router.py  schemas.py  service.py
backend/domains/auth/: __init__.py  router.py  schemas.py  service.py
backend/domains/ore_progetto/: router.py  schemas.py  service.py
backend/domains/organizer_ict/: report_service.py  router.py  schemas.py  service.py
backend/domains/utenti/: router.py  (+2 more)
sql/: rbac_setup.sql
src/: _copy_sezione_as400.py  config.py  controllo_scadenze.py  dashboard_pdf.py  db_handler_progetti.py  gestione_archivio.py  gestione_progetti.py  gestore_esportazione.py  gestore_report.py  lista_progetti_pdf.py  mail_globale.py  mail_progetto.py  mail_task_singolo.py  main.py  report_task_intervallo.py  settings.json  sezione_as400.py  sezione_as400_1.py  stampa_api.py  ui_progetti_helpers.py  vista_anagrafica.py  vista_dettaglio_progetto.py  vista_ruoli.py  vista_setting.py  vista_utenti.py
src/abilitazioni_utenti/: view.py
src/administrator_menu/: __init__.py  view.py
src/gestione_app_moduli/: __init__.py  view.py
src/modulo_utenti/: __init__.py  view.py
src/ore_progetto/: __init__.py  app.py  report.py  repository.py  view.py
src/organizer_ict/: __init__.py  app.py  main.py  ui_helpers.py  view.py
(+25 files in other folders)
