[project]
name = "prg-flet"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.80.5",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "psycopg[binary]>=3.3.0",
    "pyodbc>=5.0.0",
    "pywin32>=306",
    "PyMuPDF>=1.24.0",
    "reportlab>=4.0.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.4",
    "flet-desktop>=0.80.4",
    "flet-web>=0.80.4",
]

[tool.flet]
org = "com.mycompany"
product = "prg-flet"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
